fix: swagger funcionando corretamente
